fix a little spacing in catalog page

--- a/src/app/pages/catalog/catalog.scss
+++ b/src/app/pages/catalog/catalog.scss
@@ -23,6 +23,11 @@
       }
     }
 
+    .cagalog--games-list-title {
+      margin: 0;
+      padding-bottom: 5px;
+    }
+
     .catalog--games-list {
       padding: 0;
       list-style: none;
